2008-02-21  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst.c: followed the recent Ruby/GLib change:
	  rbgutil_{start,stop}_callback_handle_thread ->
	  rbgutil_{start,stop}_callback_dispatch_thread.

	* sample/audio-player.rb: caught EOS.

2008-02-20  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst-object.c, test/test_object.c: added Gst::Object#name=
	and Gst::Object#sink.

	* test/gst-test-utils.rb: added.
	* test/test_element.rb, test/test_element_factory.rb: used
	GstTestUtils.

2008-02-18  Kouhei Sutou  <kou@cozmixng.org>

	* sample/video-player.rb: cleanup.

	* sample/mp3-player.rb: removed needless file.

	* sample/audio-player.rb: worked as generic audio player.

	* sample/ogg-audio-player.rb: ensure stop.

	* test/: used test-unit-ext on RubyForge.

2008-02-17  Kouhei Sutou  <kou@cozmixng.org>

	* test/test_element_factory.rb, test/test_plugin.rb,
	test/test_plugin_feature.rb: followed the current GStreamer changes.

2008-02-14  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst.c (rb_gst_init): called
	rbgutil_start_callback_handle_thread().

2008-01-10  Kouhei Sutou  <kou@cozmixng.org>

	* sample/type-find.rb: added type find sample.

2008-01-06  Kouhei Sutou  <kou@cozmixng.org>

	* sample/gst-inspect.rb: supported element name inspection.

	* src/rbgst-value.c: supported GST_TYPE_ARRAY.

	* sample/gst-inspect.rb: added readable check.

	* src/rbgst-mini-object.c: supported Gst::MiniObject <-> GValue
	conversion.

	* test/test_value.rb, src/rbgst-value.c: supported GstFraction and
	GstFractionRange.

	* test/test_value.rb, src/rbgst-value.c: supported GstFourcc.

	* test/test_value.rb, src/rbgst-value.c: supported GstIntRange.

2008-01-04  Kouhei Sutou  <kou@cozmixng.org>

	* sample/gst-inspect.rb: implemented print_children_info.

	* sample/gst-inspect.rb: implemented print_signals_info.

	* sample/gst-inspect.rb: implemented print_element_properties_info.

	* sample/gst-inspect.rb: implemented print_pad_info.

	* src/rbgst-element.c: cleanup style.
